# vs-placebo-rs

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
libplacebo-rs/: Cargo.toml
libplacebo-rs/src/: colorspace.rs  dispatch.rs  gpu.rs  lib.rs  log.rs  options.rs  renderer.rs  shaders_root.rs  vulkan.rs
libplacebo-sys/: Cargo.toml  build.rs  meson.build  wrapper.h
libplacebo-sys/src/: lib.rs
vs-placebo/: Cargo.toml
vs-placebo/src/: deband.rs  lib.rs
