[package]
name = "vs-placebo"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
const-str = "0.5.7"
foreign-types = "0.5.0"
libplacebo-rs = { path = "../libplacebo-rs" }
libplacebo-sys = { path = "../libplacebo-sys" }
miette = "7.2.0"
vapoursynth4-rs = { git = "https://github.com/inflation/vapoursynth4-rs", rev = "7c1b3b8cd3c3b7b4c7d09e174cd43fb853128ec8" }
